css/styles.css
/* General */
*{
    font-family: "Josefin Sans", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

.home-paragraph{
    font-size: 25px;
    text-align: justify;
}

/* Utilities */
.bold{
    font-weight: bold;
}

.center{
    place-self: center;
}

.italic{
    font-style: italic;
    font-size: 19px;
    opacity: 0.7;
}

.parallax-container {   
    position: relative;
    height: 500px; /* Adjust to your needs */
    overflow: hidden;
}

.text-overlay {
    position: absolute;
    top: 10%;
    left: 15%;
    width: 100%;
    height: 100%;
    /* display: flex; */
    /* justify-content: center; Center horizontally */
    /* align-items: center;    Center vertically */
    z-index: 2;             /* Keep above parallax image */
}

.slide-in-text {
    opacity: 0;
    transform: translateX(-100px); /* Start 100px to the left */
    animation: slideIn 0.7s ease-in-out forwards;
}
.slide-in-text p{
    font-size: 18px;
}

@keyframes slideIn {
    to {
        opacity: 1;
        transform: translateX(0); /* Return to original position */
    }
}

